--- a/src/sass/il-components/grid/_grid.scss
+++ b/src/sass/il-components/grid/_grid.scss
@@ -46,6 +46,9 @@ main {
   & section.il-section {
     margin-top: 1rem;
     border-bottom: 1px dotted #3d4168;
+    &.il-section--no-margin {
+      margin: 0;
+    }
     &.il-section--default {
       margin: 0;
       padding: 4rem 0;
@@ -62,7 +65,6 @@ main {
         display: grid;
         grid-template-rows: auto;
         grid-row-gap: 0.5rem;
-
         @media screen and(min-width:651px) {
           grid-template-columns: 1fr 1fr;
           grid-column-gap: 0.5rem;
